fix project list wrapping

--- a/src/index.scss
+++ b/src/index.scss
@@ -515,6 +515,7 @@ nav {
         ul{
           list-style-type: none;
           display: flex;
+          flex-flow: row wrap;
           column-gap:$xxs;
           
           font:{
